name:                bdo
version:             1.0.1
synopsis:            Update CSS in the browser without reloading the page.
description:         Update CSS in the browser without reloading the page.
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.8
data-files: bdo.js

library
  exposed-modules:  Bdo
  other-modules:    Http
  build-depends:    base >= 4 && < 5,
                    url, text, network, aeson
  hs-source-dirs:   src

executable bdo
  main-is:          Main.hs
  other-modules:    Bdo, Http
  build-depends:    base >= 4 && < 5,
                    url, text, network, aeson
  hs-source-dirs:   src
